# Catch-Them-Apples

./: CMakeLists.txt  README.md
Catch_tests/: CMakeLists.txt  main.py  main_test.cpp
Catch_tests/testRes/: test0.txt  test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
game/: format_h_and_cpp_files_in_current_folder.sh  game.cpp  gameFunctions.cpp  gameFunctions.h  globalVariables.h  imageProcessing.cpp  imageProcessing.h
